# VersatileCInterpreter

./: .gitignore  C.g4  CMakeLists.txt  Interpreter.cpp  Interpreter.h  README.md
src/: C.g4  CInterpreterVisitor.cpp  CInterpreterVisitor.h  ConsoleReplUI.h  CustomErrorListener.cpp  CustomErrorListener.h  EnvScopeGuard.h  Environment.cpp  Environment.h  Function.h  IReplUI.h  ImGuiReplUI.cpp  ImGuiReplUI.h  Interpreter.cpp  Interpreter.h  REPL.cpp  REPL.h  ReturnException.h  Utils.cpp  Utils.h  Variable.h  main.cpp
tests/: CInterpreterVisitorTests.cpp  CMakeLists.txt  EnvironmentTests.cpp  InterpreterTests.cpp  REPLTests.cpp  main.cpp
